Fix table formatting and spacing to more closely match spec.

--- a/src/main/Components/PageBox.css
+++ b/src/main/Components/PageBox.css
@@ -1,8 +1,5 @@
 .page_box > * {
 	width:80%;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
 }
 
 .page_box {
